# BOT_TDM

./: .gitignore  .gitmodules  DockerFile  Dockerfile  README.md  _Dockerfile  main.py  nixpacks.toml  pyproject.toml  railway.py  requirements.txt  start.sh
fonctions/: __init__.py  bolosse.py  calculs.py  calendrier.py  clash.py  combat.py  customWords.py  duel.py  fight.py  fights.py  help.py  justeprix.py  jvaisVX.py  music.py  random_number.py  recherche.py  snifsnouf.py  youtube_search.py  ytbAlert.py
fonctions/ARAM/: mainAram.py  persos_lol.txt
fonctions/COMPO/: compos.md  compos.py
fonctions/COMPO/resources/compos/: mort.md  ultime.md
fonctions/jumbledWordsRes/: jumbledWordsResolver.py  words.txt
fonctions/jvaisVX/: main.py
